--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -2,6 +2,7 @@
 @model IndexModel
 @{
     ViewData["Title"] = "Dashboard";
+    ViewData["Breadcrumbs"] = "Dashboard";
 }
 
 <div class="container-fluid">
